--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f1887493",
+   "id": "32acf9aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a32c6ee4",
+   "id": "a8091702",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2652067e",
+   "id": "37e07e6a",
    "metadata": {},
    "outputs": [
     {
@@ -8676,7 +8676,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1e3b1d04",
+   "id": "9115c445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8687,7 +8687,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "7eb3d422",
+   "id": "96596003",
    "metadata": {},
    "outputs": [
     {
@@ -9171,8 +9171,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "id": "90d7726e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "50d2162a",
+   "id": "6eeeff0c",
    "metadata": {},
    "outputs": [],
    "source": []
