--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">Deadline Closing for Names to Fly on NASA's Next Mars Rover</div>"
+       "<div class=\"content_title\">6 Things to Know About NASA's Ingenuity Mars Helicopter</div>"
       ]
      },
      "execution_count": 5,
@@ -108,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Deadline Closing for Names to Fly on NASA's Next Mars Rover\""
+       "\"6 Things to Know About NASA's Ingenuity Mars Helicopter\""
       ]
      },
      "execution_count": 6,
@@ -131,7 +131,7 @@
     {
      "data": {
       "text/plain": [
-       "'You have until Sept. 30 to send your names to Mars aboard the Mars 2020 rover. '"
+       "'The first helicopter attempting to fly on another planet is a marvel of engineering. Get up to speed with these key facts about its plans.'"
       ]
      },
      "execution_count": 7,
@@ -214,17 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "1fa4e0c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
+   "id": "29cca1ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 92.0.4515\n",
+      "Get LATEST driver version for 92.0.4515\n",
+      "Driver [/Users/oi/.wdm/drivers/chromedriver/mac64/92.0.4515.107/chromedriver] found in cache\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set up Splinter (Set the executable path and initialize Splinter)\n",
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "608257d4",
    "metadata": {},
    "outputs": [],
@@ -416,22 +441,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "id": "531df404",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cerberus Hemisphere Enhanced\n",
-      "https://marshemispheres.com/images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\n",
-      "Cerberus Hemisphere Enhanced\n",
-      "https://marshemispheres.com/images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\n",
-      "Cerberus Hemisphere Enhanced\n",
-      "https://marshemispheres.com/images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\n",
-      "Cerberus Hemisphere Enhanced\n",
-      "https://marshemispheres.com/images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\n"
+     "ename": "ElementDoesNotExist",
+     "evalue": "no elements could be found with link by partial text \"Cerberus Hemisphere Enhanced\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/splinter/element_list.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_container\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mElementDoesNotExist\u001b[0m               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-7dc3dc251669>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mhemisphere_image_urls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# 3. Write code to retrieve the image urls and titles for each hemisphere.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mbrowser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_by_partial_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Cerberus Hemisphere Enhanced'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Retrieve all elements that contain need information\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/splinter/element_list.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m     74\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/splinter/element_list.py\u001b[0m in \u001b[0;36mfirst\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     55\u001b[0m             \u001b[0;34m>>\u001b[0m\u001b[0;34m>\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0melement_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0melement_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m         \"\"\"\n\u001b[0;32m---> 57\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/splinter/element_list.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_container\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m             raise ElementDoesNotExist(\n\u001b[0m\u001b[1;32m     45\u001b[0m                 u'no elements could be found with {0} \"{1}\"'.format(\n\u001b[1;32m     46\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_by\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mElementDoesNotExist\u001b[0m: no elements could be found with link by partial text \"Cerberus Hemisphere Enhanced\""
      ]
     }
    ],
@@ -442,104 +471,41 @@
     "# 2. Create a list to hold the images and titles.\n",
     "hemisphere_image_urls = []\n",
     "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
+    "browser.links.find_by_partial_text('Cerberus Hemisphere Enhanced').click()\n",
+    "\n",
     "# Retrieve all elements that contain need information \n",
-    "hemispheres= img_urls_soup.find_all('div', class_=\"item\")\n",
+    "# hemispheres= img_urls_soup.find_all('div', class_=\"item\")\n",
+    "\n",
+    "# for item in hemispheres:\n",
+    "#     title = img_urls_soup.find('h3').text\n",
+    "#     url = img_urls_soup.find('img', class_='thumb').get('src')\n",
+    "#     img_url = f'https://marshemispheres.com/{url}'\n",
+    "#     print(title)\n",
+    "#     print(img_url)\n",
+    "    \n",
+    "#     items= dict({'img_url':img_url,'title': title})\n",
+    "#     hemisphere_image_urls.append(items)\n",
+    "\n",
+    "hemispheres= img_urls_soup.find_all('div', class_=\"downloads\")\n",
     "\n",
     "for item in hemispheres:\n",
     "    title = img_urls_soup.find('h3').text\n",
-    "    url = img_urls_soup.find('img', class_='thumb').get('src')\n",
-    "    item_url = f'https://marshemispheres.com/{url}'\n",
+    "#     <a target=\"_blank\" href=\"images/full.jpg\">Sample</a>\n",
+    "    url = hemispheres.a('href')\n",
+    "    img_url = f'https://marshemispheres.com/{url}'\n",
     "    print(title)\n",
-    "    print(item_url)\n",
+    "    print(img_url)\n",
     "    \n",
-    "    items= dict({'item_url':item_url,'title': title})\n",
-    "    hemisphere_image_urls.append(items)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6609b6c2",
-   "metadata": {},
-   "source": [
-    "<div class=\"collapsible results\">\n",
-    "# Cerberus Hemisphere Enhanced\n",
-    "                        <div class=\"item\">\n",
-    "                           <a href=\"cerberus.html\" class=\"itemLink product-item\"><img class=\"thumb\" src=\"images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\" alt=\"Cerberus Hemisphere Enhanced thumbnail\"></a>\n",
-    "\n",
-    "                           <div class=\"description\">\n",
-    "                              <a href=\"cerberus.html\" class=\"itemLink product-item\">\n",
-    "\n",
-    "                                 <h3>Cerberus Hemisphere Enhanced</h3>\n",
-    "                              </a>\n",
-    "                              <span class=\"subtitle\" style=\"float:left\">image/tiff 21 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br>\n",
-    "                              <p>Mosaic of the Cerberus hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of 104 Viking Orbiter images acquired…</p>\n",
-    "                           </div>\n",
-    "                           <!-- end description -->\n",
-    "                        </div>\n",
-    "# Schiaparelli Hemisphere Enhanced\n",
-    "                        <div class=\"item\">\n",
-    "                           <a href=\"schiaparelli.html\" class=\"itemLink product-item\"><img class=\"thumb\" src=\"images/08eac6e22c07fb1fe72223a79252de20_schiaparelli_enhanced.tif_thumb.png\" alt=\"Schiaparelli Hemisphere Enhanced thumbnail\"></a>\n",
-    "                           <div class=\"description\">\n",
-    "                              <a href=\"schiaparelli.html\" class=\"itemLink product-item\">\n",
-    "                                 <h3>Schiaparelli Hemisphere Enhanced</h3>\n",
-    "                              </a>\n",
-    "                              <span class=\"subtitle\" style=\"float:left\">image/tiff 35 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br>\n",
-    "                              <p>Mosaic of the Schiaparelli hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The images were acquired in 1980 during early northern…</p>\n",
-    "                           </div>\n",
-    "                           <!-- end description -->\n",
-    "                        </div>\n",
-    "#  Syrtis Major Hemisphere Enhanced\n",
-    "                        <div class=\"item\">\n",
-    "                           <a href=\"syrtis.html\" class=\"itemLink product-item\"><img class=\"thumb\" src=\"images/55a0a1e2796313fdeafb17c35925e8ac_syrtis_major_enhanced.tif_thumb.png\" alt=\"Syrtis Major Hemisphere Enhanced thumbnail\"></a>\n",
-    "                           <div class=\"description\">\n",
-    "                              <a href=\"syrtis.html\" class=\"itemLink product-item\">\n",
-    "                                 <h3>Syrtis Major Hemisphere Enhanced</h3>\n",
-    "                              </a>\n",
-    "                              <span class=\"subtitle\" style=\"float:left\">image/tiff 25 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br>\n",
-    "                              <p>Mosaic of the Syrtis Major hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of about 100 red and violet…</p>\n",
-    "                           </div>\n",
-    "                           <!-- end description -->\n",
-    "                        </div>\n",
-    "#     Valles Marineris Hemisphere Enhanced                   \n",
-    "                        <div class=\"item\">\n",
-    "                           <a href=\"valles.html\" class=\"itemLink product-item\"><img class=\"thumb\" src=\"images/4e59980c1c57f89c680c0e1ccabbeff1_valles_marineris_enhanced.tif_thumb.png\" alt=\"Valles Marineris Hemisphere Enhanced thumbnail\"></a>\n",
-    "                           <div class=\"description\">\n",
-    "                              <a href=\"valles.html\" class=\"itemLink product-item\">\n",
-    "                                 <h3>Valles Marineris Hemisphere Enhanced</h3>\n",
-    "                              </a>\n",
-    "                              <span class=\"subtitle\" style=\"float:left\">image/tiff 27 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br>\n",
-    "                              <p>Mosaic of the Valles Marineris hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The distance is 2500 kilometers from the surface of…</p>\n",
-    "                           </div>\n",
-    "                           <!-- end description -->\n",
-    "                        </div>\n",
-    "                     </div>"
+    "    items= dict({'img_url':img_url,'title': title})\n",
+    "    hemisphere_image_urls.append(items)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "291a2890",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'item_url': 'https://marshemispheres.com/images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png',\n",
-       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
-       " {'item_url': 'https://marshemispheres.com/images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png',\n",
-       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
-       " {'item_url': 'https://marshemispheres.com/images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png',\n",
-       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
-       " {'item_url': 'https://marshemispheres.com/images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png',\n",
-       "  'title': 'Cerberus Hemisphere Enhanced'}]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 4. Print the list that holds the dictionary of each image url and title.\n",
     "hemisphere_image_urls"
@@ -547,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "2400bebb",
    "metadata": {},
    "outputs": [],
